src/main/resources/view/HelpWindow.css
#copyButton, #helpMessage, #commandUsages {
    -fx-text-fill: white;
}

#copyButton {
    -fx-background-color: dimgray;
}

#copyButton:hover {
    -fx-background-color: gray;
}

#copyButton:armed {
    -fx-background-color: darkgray;
}

#helpMessageContainer {
    -fx-background-color: derive(#1d1d1d, 20%);
    -fx-min-width: 1080;
    -fx-font-size: 14;
}

#helpMessageScrollPane {
    -fx-max-height: 600;
    -fx-min-width: 1100;
}

